<resources>
    <string name="app_name">SplitterMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splitter_logo">Splitter logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="current_user_avatar">Current User Avatar</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="user_avatar">user avatar</string>
    <string name="search">Search</string>
    <string name="friend_requests">Friend requests</string>
    <string name="pending_friend_requests">Your friend requests</string>
    <string name="received_friend_requests">Received friend requests</string>
    <string name="friend_avatar">friend_avatar</string>
    <string name="confirm_friend_request">confirm friend request</string>
    <string name="reject_friend_request">reject friend request</string>
    <string name="expenses">Expenses</string>
    <string name="unsettled_expenses">Unsettled expenses</string>
    <string name="amount">Amount</string>
    <string name="descrption">Descrption</string>
    <string name="lender">Lender</string>
    <string name="settle_up">Settle up</string>
    <string name="delete">Delete</string>
    <string name="add_expense">Add expense</string>
    <string name="expense_type">expense type</string>
    <string name="paid_by">paid by</string>
    <string name="paid_by_spinner">paid by spinner</string>
    <string name="debtors">debtors</string>
    <string name="currency">currency</string>
    <string name="total_sum">total sum</string>
    <string name="lender_paid">lender paid</string>
    <string name="description_lower">description</string>
    <string name="add_debtor">add debtor</string>
    <string name="groups">Groups</string>
    <string name="group_name">Group name:</string>
    <string name="created_by">Created by:</string>
    <string name="created_at">Created at:</string>
    <string name="number_of_members">No. members:</string>
    <string name="create_group">Create group</string>
    <string name="group_details">Group details</string>
    <string name="members">Members</string>
    <string name="add_members">Add members</string>
    <string-array name="expense_types">
        <item>Non group</item>
    </string-array>
    <string-array name="currency">
        <item>PLN</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
</resources>