<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GroupDetailsFragment">

    <TextView
        android:id="@+id/group_details_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/group_details"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/group_details_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/group_details_created_by_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:padding="4dp"
            android:text="@string/created_by"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/group_details_created_by_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="4dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/group_details_created_at_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:padding="4dp"
            android:text="@string/created_at"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/group_details_created_at_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="4dp"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/group_details_members_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/members"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_members_rv"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="6dp" />

    <TextView
        android:id="@+id/add_members_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/add_members"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/potential_members_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="7"
            android:padding="6dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"
            android:src="@android:drawable/ic_input_add" />
    </LinearLayout>

</LinearLayout>