<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingStart="2dp"
    android:paddingTop="2dp"
    android:paddingEnd="2dp"
    android:paddingBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp">

                <TextView
                    android:id="@+id/group_name_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/group_name" />

                <TextView
                    android:id="@+id/group_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/created_by_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/created_by" />

                <TextView
                    android:id="@+id/created_by_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/created_at_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/created_at" />

                <TextView
                    android:id="@+id/created_at_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/members_count_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/number_of_members" />

                <TextView
                    android:id="@+id/members_count_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingStart="2dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/group_details_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7622A6" />


</LinearLayout>